--- a/templates/includes/list.html
+++ b/templates/includes/list.html
@@ -35,7 +35,8 @@
                                     </li>
                                 </ul>
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn btn-warning">Update</a>
+                                    <a href="#" class="btn btn-danger">Delete</a>
                                 </div>
                             </div>
                         </div>
