--- a/templates/includes/list.html
+++ b/templates/includes/list.html
@@ -12,12 +12,13 @@
 <!-- Reservation Start -->
 <div id="reservation" class="container-xxl px-0 wow fadeInUp" data-wow-delay="0.1s">
     <div class="row g-0">
-        <div class="col-md-12 bg-dark d-flex align-items-center">
-            <div class="mx-auto p-5 wow fadeInUp" data-wow-delay="0.2s">
-                <h1 class="section-title ff-secondary text-start text-primary fw-normal">Your Reservations</h1>
+        <div class="pb-5 col-md-12 bg-dark d-flex align-items-center">
+            <div class="mx-auto pt-3 wow fadeInUp" data-wow-delay="0.2s">
+                <h1 class="pt-3 section-title ff-secondary text-start text-primary fw-normal">Your Reservations</h1>
                 <!--<h1 class="text-white mb-4">Book A Table Online</h1>-->
+                {% if reservations %}
                 <div class="container-xxl px-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="row row-cols-1 row-cols-md-3 g-3">
+                    <div class="row row-cols-md-12 g-3">
                         {% for reservation in reservations %}
                         <div class="col">
                             <div class="card">
@@ -36,13 +37,29 @@
                                 </ul>
                                 <div class="card-body">
                                     <a href="{% url 'update_list' reservation.id %}" class="btn btn-warning">Update</a>
-                                    <a href="#" class="btn btn-danger">Delete</a>
+                                    <a href="{% url 'delete_reservation' reservation.id %}" class="btn btn-danger">Delete</a>
                                 </div>
                             </div>
                         </div>
                         {% endfor %}
                     </div>
                 </div>
+                {% else %}
+                <div class="container-xxl px-0 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="row row-cols-1 row-cols-md-1 g-3">
+                        <div class="container-xxl container-booking bg-dark hero-header">
+                            <div class="container row-cols-md-1 text-center my-0 pt-5 pb-5">
+                                <h1 class="display-5 text-white mb-3 animated slideInDown">
+                                    It seems you don't have any reservations
+                                </h1>
+                                <h4 class="text-white">
+                                    If want to book a reservation, you can do it <a href="{% url 'make_reservation' %}">Here</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
