--- a/templates/includes/aboutus.html
+++ b/templates/includes/aboutus.html
@@ -6,19 +6,19 @@
                 <div class="row g-3">
                     <div class="col-6 text-start">
                         <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s"
-                            src="static/img/about-1.jpg">
+                            src="{% static 'img/about-1.jpg' %}">
                     </div>
                     <div class="col-6 text-start">
                         <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s"
-                            src="static/img/about-2.jpg" style="margin-top: 25%;">
+                            src="{% static 'img/about-2.jpg' %}" style="margin-top: 25%;">
                     </div>
                     <div class="col-6 text-end">
                         <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s"
-                            src="static/img/about-3.jpg">
+                            src="{% static 'img/about-3.jpg' %}">
                     </div>
                     <div class="col-6 text-end">
                         <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s"
-                            src="static/img/about-4.jpg">
+                            src="{% static 'img/about-4.jpg' %}">
                     </div>
                 </div>
             </div>
